The page is now responsive

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="app" class="p-3">
       <h1 class="title">Leaderboard</h1>
-      <div class="flex">
+      <div class="flex content">
         <div class="w-half p-3">
           <div class="flex justify-between mb-3">
             <h2>Recent scores</h2>
@@ -30,7 +30,7 @@
           </table>
         </div>
         <div class="w-half p-3">
-          <h1 class="mb-3">Add your score</h1>
+          <h2 class="mb-3">Add your score</h2>
           <form id="score-form" class="text-right">
             <input type="text" id="name" class="input mb-1" placeholder="Your name" />
             <input type="number" id="score" class="input mb-1" placeholder="Your score" />
