Add form validation

--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,8 @@
         <div class="w-half p-3">
           <h1 class="mb-3">Add your score</h1>
           <form id="score-form" class="text-right">
-            <input type="text" id="name" class="input mb-1" placeholder="Your name" />
-            <input type="number" id="score" class="input mb-1" placeholder="Your score" />
+            <input type="text" id="name" class="input mb-1" placeholder="Your name" required autofocus />
+            <input type="number" id="score" class="input mb-1" placeholder="Your score" required />
             <button type="submit">Submit</button>
           </form>
         </div>
